--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BetPro - Coming Soon</title>
+    <title>BallStreet Bets - Analytics for the ball-knowers</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 min-h-screen flex items-center justify-center">
     <div class="max-w-xl mx-auto p-6 text-center">
         <div class="mb-12">
-            <h1 class="text-5xl font-bold text-white mb-4">BetPro</h1>
-            <p class="text-xl text-gray-300 mb-2">Your Ultimate Sports Betting Experience</p>
+            <h1 class="text-5xl font-bold text-white mb-4">BallStreet Bets</h1>
+            <p class="text-xl text-gray-300 mb-2">Analytics for the ball-knowers</p>
             <p class="text-gray-400">Coming Soon</p>
         </div>
 
