--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body class="bg-gray-900 min-h-screen flex items-center justify-center">
     <div class="max-w-xl mx-auto p-6 text-center">
         <div class="mb-12">
-            <h1 class="text-5xl font-bold text-white mb-4">BallStreet Bets</h1>
+            <h1 class="text-6xl font-bold text-white mb-4">Ball<span class="text-blue-500">Street</span></h1>
             <p class="text-xl text-gray-300 mb-2">Analytics for the ball-knowers</p>
-            <p class="text-gray-400">Coming Soon</p>
+            <p class="text-gray-400">Taking sports predictions to Wall Street</p>
         </div>
 
         <div class="bg-gray-800 p-8 rounded-lg shadow-xl">
-            <h2 class="text-2xl font-semibold text-white mb-6">Be the First to Know</h2>
-            <p class="text-gray-300 mb-8">Get exclusive access and special offers when we launch.</p>
+            <h2 class="text-2xl font-semibold text-white mb-6">Join the Movement</h2>
+            <p class="text-gray-300 mb-8">Get early access to data-driven sports analytics.</p>
             
             <form id="emailForm" class="space-y-4">
                 <div>
