--- a/index.html
+++ b/index.html
@@ -5,31 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BallStreet Bets - Analytics for the ball-knowers</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <style>
+        .bg-roulette {
+            background-color: #0B4F31;
+        }
+        .bg-seafoam {
+            background-color: #98FFD6;
+        }
+        .hover-seafoam:hover {
+            background-color: #7EEBC2;
+        }
+        .text-seafoam {
+            color: #98FFD6;
+        }
+    </style>
 </head>
-<body class="bg-gray-900 min-h-screen flex items-center justify-center">
+<body class="bg-roulette min-h-screen flex items-center justify-center">
     <div class="max-w-xl mx-auto p-6 text-center">
         <div class="mb-12">
-            <h1 class="text-6xl font-bold text-white mb-4">Ball<span class="text-blue-500">Street</span></h1>
+            <h1 class="text-6xl font-bold text-white mb-4">Ball<span class="text-seafoam">Street</span></h1>
             <p class="text-xl text-gray-300 mb-2">Analytics for the ball-knowers</p>
-            <p class="text-gray-400">Taking sports predictions to Wall Street</p>
         </div>
 
         <div class="bg-gray-800 p-8 rounded-lg shadow-xl">
             <h2 class="text-2xl font-semibold text-white mb-6">Join the Movement</h2>
             <p class="text-gray-300 mb-8">Get early access to data-driven sports analytics.</p>
             
-            <form id="emailForm" class="space-y-4">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSeqluFmUtY02A9rg6qq5SVgoRuV7zMI--bvB5TS7_spzLIjcQ/formResponse" method="POST" class="space-y-4">
+                <div>
+                    <input 
+                        type="text" 
+                        name="entry.2034867047"
+                        placeholder="First Name" 
+                        class="w-full px-4 py-3 rounded bg-gray-700 text-white border border-gray-600 focus:border-seafoam focus:outline-none mb-4"
+                        required
+                    >
+                </div>
                 <div>
                     <input 
                         type="email" 
-                        placeholder="Enter your email" 
-                        class="w-full px-4 py-3 rounded bg-gray-700 text-white border border-gray-600 focus:border-blue-500 focus:outline-none"
+                        name="entry.1790010594"
+                        placeholder="Email Address" 
+                        class="w-full px-4 py-3 rounded bg-gray-700 text-white border border-gray-600 focus:border-seafoam focus:outline-none"
                         required
                     >
                 </div>
                 <button 
                     type="submit"
-                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded transition duration-200"
+                    class="w-full bg-seafoam hover:hover-seafoam text-gray-900 font-semibold py-3 px-6 rounded transition duration-200"
                 >
                     Join Waitlist
                 </button>
@@ -42,13 +65,23 @@
     </div>
 
     <script>
-        document.getElementById('emailForm').addEventListener('submit', function(e) {
+        document.querySelector('form').addEventListener('submit', function(e) {
             e.preventDefault();
-            const email = e.target.querySelector('input[type="email"]').value;
             
-            // Here you would typically send the email to your backend
-            alert('Thanks! We\'ll notify you when we launch.');
-            e.target.reset();
+            const formData = new FormData(this);
+            fetch(this.action, {
+                method: 'POST',
+                body: formData,
+                mode: 'no-cors'
+            })
+            .then(() => {
+                alert('Thanks for joining! We\'ll keep you updated.');
+                this.reset();
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Something went wrong. Please try again.');
+            });
         });
     </script>
 </body>
