--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
             <h2 class="text-2xl font-semibold text-white mb-6">Join the Movement</h2>
             <p class="text-gray-300 mb-8">Get early access to data-driven sports analytics.</p>
             
-            <form method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSeqluFmUtY02A9rg6qq5SVgoRuV7zMI--bvB5TS7_spzLIjcQ/formResponse" class="space-y-4">
+            <form method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSeqluFmUtY02A9rg6qq5SVgoRuV7zMI--bvB5TS7_spzLIjcQ/formResponse" class="space-y-4" target="_blank">
+                <!-- Required Google Form hidden fields -->
+                <input type="hidden" name="fvv" value="1">
+                <input type="hidden" name="draftResponse" value='[null,null,"2122661367221897979"]'>
+                <input type="hidden" name="pageHistory" value="0">
+                <input type="hidden" name="fbzx" value="2122661367221897979">
+
                 <div>
                     <input 
                         type="text" 
@@ -65,22 +71,12 @@
     </div>
 
     <script>
-        document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const formData = new FormData(this);
-            
-            fetch('https://docs.google.com/forms/d/e/1FAIpQLSeqluFmUtY02A9rg6qq5SVgoRuV7zMI--bvB5TS7_spzLIjcQ/formResponse', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
+        const form = document.querySelector('form');
+        form.addEventListener('submit', function() {
+            setTimeout(function() {
                 alert('Thanks for joining! We\'ll keep you updated.');
-                this.reset();
-            })
-            .catch(error => {
-                alert('Thanks for joining! We\'ll keep you updated.');
-                this.reset();
-            });
+                form.reset();
+            }, 1000);
         });
     </script>
 </body>
